# Lets-Make-a-Rusty-Connect-4

./: README.md
client/: Cargo.toml
client/game_test/: Cargo.toml
client/game_test/src/: main.rs
client/sass/: main.scss
client/sass/base/: _base.scss  _resets.scss
client/sass/components/: _board.scss  _login.scss  _sidebar.scss  _stats.scss
client/src/: app.rs  main.rs
client/src/components/: auth.rs  connect4_page.rs  sidebar.rs  stats.rs  toot_and_otto_page.rs
client/src/connect4/: con4_ai.rs  connect4.rs
client/src/toot_and_otto/: toot_ai.rs  toot_and_otto.rs
client/src/types/: opponent.rs
server/: Cargo.toml
server/src/: main.rs
server/src/controller/: db_request.rs  document_update.rs
