[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.17.4"
yew-router = "0.14.0"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
log = "0.4.16"
wasm-logger = "0.2.0"
strum = "0.24.0"
strum_macros = "0.24.0"
anyhow = "1.0.56"
wasm-bindgen = "0.2.80"

[dependencies.rand]
version = "0.6.5"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.57"
features = [
    "Document",
    "DomStringMap",
    "Element",
    'Headers',
    "HtmlElement",
    "HtmlDocument",
    "SvgsvgElement",
    "Location",
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "Storage",
    "Window",
]
