[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
rocket_cors = "0.5.1"
http = "0.2.6"

[dependencies.rocket_contrib]
version="0.4.10"
features=["json", "templates", "handlebars_templates"]

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]

